# ext-sort-rs

./: Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
examples/: custom_serializer.rs  custom_type.rs  quickstart.rs
src/: buffer.rs  chunk.rs  lib.rs  main.rs  merger.rs  sort.rs
