[package]
name = "ext-sort"
version = "0.1.0"
edition = "2021"

[dependencies]
deepsize = { version = "^0.2", optional = true }
log = "0.4"
rayon = "^1.5"
rmp-serde = "^0.15"
serde = { version = "^1.0", features = ["derive"] }
tempfile = "^3.2"

[dev-dependencies]
rstest = "^0.12"
rand = "^0.8"

[features]
memory-limit = ["deepsize"]
