[package]
name = "ext-sort"
version = "0.1.3"
edition = "2021"
license = "Unlicense"
description = "rust external sort algorithm implementation"
readme = "README.md"

homepage = "https://github.com/dapper91/ext-sort-rs"
documentation = "https://docs.rs/ext-sort/"
repository = "https://github.com/dapper91/ext-sort-rs"

categories = ["algorithms"]
keywords = ["algorithms", "sort", "sorting", "external-sort", "external"]

[dependencies]
bytesize = { version = "1.1.0", optional = true }
clap = { version = "3.0.0", features = ["derive"], optional = true }
deepsize = { version = "0.2.0", optional = true }
env_logger = { version = "0.9.0", optional = true}
log = "0.4.8"
rayon = "1.5.0"
rmp-serde = "1.1.1"
serde = { version = "1.0.120", features = ["derive"] }
tempfile = "3.2.0"

[dev-dependencies]
rstest = "0.12.0"
rand = "0.8.0"

[features]
memory-limit = ["deepsize"]

[[bin]]
name = "ext-sort"
required-features = ["bytesize", "clap", "env_logger", "memory-limit"]

[[example]]
name = "quickstart"
required-features = ["bytesize", "env_logger", "memory-limit"]

[[example]]
name = "custom_serializer"
required-features = ["env_logger"]

[[example]]
name = "custom_type"
required-features = ["env_logger"]
